# Image-Alex

./: README.md
.devcontainer/: CMakeLists.txt  devcontainer.json
.devcontainer/include/: wsi_reader.hpp
.devcontainer/src/: main.cpp  wsi_reader.cpp
